# euwinner

./: README.md  simple_test.py  test_range_validation.py
docs/: ADD_WEB_FRAMEWORK.md  ANALYSIS_CONTROLLER_IMPLEMENTATION.md  ANALYSIS_CONTROLLER_USAGE.md  ANALYSIS_QUICK_REFERENCE.md  BEFORE_AFTER_COMPARISON.md  BUG_FIX_SUMMARY.md  CONTROLLER_GENERATION_SUMMARY.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_SUMMARY.md  FINAL_STATUS.md  GENERATED_FILES_MANIFEST.md  GENERATION_CHECKLIST.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENT_SUMMARY.md  MIGRATION_PLAN.md  NUMBER_RANGE_ENHANCEMENT.md  NUMBER_RANGE_QUICK_REFERENCE.md  PLAN.md  PROJECT_COMPLETION_CERTIFICATE.md  QUICK_REFERENCE.md  QUICK_START_SYSTEM_SIZE.md  RANDOM_NUMBERS_CONTROLLER_GUIDE.md  README.md  RESOLUTION_SUMMARY.md  VERIFICATION_CHECKLIST.md  WHAT_WAS_DELIVERED.md  WHEELING_IMPROVEMENTS.md  WINNING_CHANCES.md  WheelingSystemBuilder.java  pyproject.toml
docs/random-generator/: DELIVERY_SUMMARY.md  GENERATE_FROM_LIST_FEATURE.md  GENERATE_FROM_LIST_QUICK_START.md  IMPLEMENTATION_STATUS.md  RANDOM_FROM_LIST_SUMMARY.md
euwin/: __init__.py  requirements.txt
euwin/analysis/: __init__.py  frequency_analyzer.py  number_frequency.py
euwin/api/: __init__.py  main.py
euwin/api/routes/: __init__.py  analysis_controller.py  data_controller.py  random_numbers_controller.py  system_controller.py
euwin/cqrs/: __init__.py
euwin/exception/: __init__.py  exceptions.py
euwin/process/: __init__.py  combination_builder.py  random_numbers_generator.py  wheeling_system_builder.py
euwin/utils/: __init__.py
euwin/validate/: __init__.py  combination_validation.py  schema_validation.py
tests/: __init__.py  conftest.py
tests/data/: lotto-draw-history.csv  lotto-draw-history_01.csv  lotto-draw-historyaa.csv
tests/test_api/: __init__.py  demo_random_selection.py  test_analysis_controller.py  test_random_from_list.py  test_random_numbers_controller.py  test_wheeling_system.py
tests/tests_manual/: test.rest
